test/sema/const-increment.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

extern const int& f();

void main() {
    var i = f();
    // CHECK: [[@LINE+1]]:9: error: cannot increment immutable value of type 'const int'
    (*i)++;
}
